<resources>
    <string name="app_name">TechChallenge</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_phone_number">Enter Your \nPhone Number</string>
    <string name="enter_your_otp">Enter The \nOTP</string>
    <string name="_9562673169">9562673169</string>
    <string name="_continue">Continue</string>
    <string name="_91">+91</string>
    <string name="_91_9562673169">+91 9562673169</string>
    <string name="personal_message_to_you">Personal Message to you</string>
    <string name="discover">Discover</string>
    <string name="notes">Notes</string>
    <string name="matches">Matches</string>
    <string name="tap_to_review_50_notes">Tap to review 50+ notes</string>
    <string name="meena">Meena</string>
    <string name="upgarde">Upgarde</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="premium_members_can_view_all_their_likes_at_once">Premium members can view all their likes at once</string>
</resources>