<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05"/>


            <TextView
                android:id="@+id/txtNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
                android:text="@string/notes"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroyetrabold"
                />

            <TextView
                android:id="@+id/txtPersonalMessages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/txtNotes"
                android:text="@string/personal_message_to_you"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroysemibold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/txtPersonalMessages"
                android:layout_marginTop="10dp"
                tools:itemCount="1"
                tools:listitem="@layout/item_profile"
                android:orientation="horizontal"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btUpgarde"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/textView1"
                android:layout_marginTop="10dp"
               app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
                android:background="@drawable/yellow_bg"
                style="@style/PrimaryButton"
                android:text="@string/upgarde"
                android:paddingHorizontal="25dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroyetrabold"
                android:textSize="16sp"/>


            <TextView
                android:id="@+id/tvIntrestedInYou"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rvProfile"
                app:layout_constraintEnd_toStartOf="@id/btUpgarde"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                android:text="@string/interested_in_you"
                android:textColor="@color/black"
                android:fontFamily="@font/gilroyetrabold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvIntrestedInYou"
                app:layout_constraintEnd_toStartOf="@id/btUpgarde"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                android:text="@string/premium_members_can_view_all_their_likes_at_once"
                android:textColor="@color/textGreyColor"
                android:fontFamily="@font/gilroysemibold"
                android:textSize="14sp"
                android:layout_marginEnd="10dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLikes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
                app:layout_constraintTop_toBottomOf="@id/btUpgarde"
                android:layout_marginTop="15dp"
                tools:itemCount="1"
                tools:listitem="@layout/item_invite"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>